@@ -32,6 +32,7 @@ Views 3.x-7.x-dev
     o #648438 by dww: In rare circumstances, unnecessary term_node tables could be joined in when adding term_data relationships.
     o #621780 by PaulMagrath: Even/Odd classes wrong with grouping due to row numbering no longer being sequential.
     o #660140 by dagmar: Add a raw user name filter so that we can do more filtering purely on the user name.
+    o #383994 by bendiy: Allow column align setting on tables.
 
 Views 3.x-6.x-dev
   Bug fixes:
